<resources>
    <string name="app_name">OHM Magnet Therapy</string>
    <string name="bottom_label_home">home</string>
    <string name="bottom_label_appointment">appointment</string>
    <string name="bottom_label_about_us">about us</string>
    <string name="bottom_label_contact_us">contact us</string>
    <string name="label_gujarati">ગુજરાતી</string>
    <string name="label_english">English</string>


    <string name="eng_data">I am Keval Shah</string>
    <string name="about_me_guj">હકલ્પેશ ભટ્ટ મેગ્નેટ થેરેપીમાં તેમજ એક્યુપ્રેશર થેરપીમાં ચિકિત્સક તરીકેની કુશળતા ધરાવે છે. તેમણે એક્યુપ્રેશર રિસર્ચ, ટ્રેનિંગ અને ટ્રીટમેન્ટ ઈન્સ્ટિટ્યૂટ, જોધપુર, રાજસ્થાનમાંથી તેમની ડિગ્રી અને તાલીમ લીધી છે. મૂળરૂપે તે સાહિત્યનો માણસ છે પરંતુ મેગ્નેટ થેરેપીના ક્ષેત્રમાં તેની જિજ્ityાસા અને મેરેથોન અધ્યયનને તેમને ‘ચિકિત્સક’ બનાવ્યા. તેમણે આણંદ, વલ્લભ વિધ્યાનગર, કરમસદની મુલાકાત લોકો, ખાસ કરીને વૃદ્ધ વૃદ્ધ લોકોની સારવાર માટે કરી હતી. તેણે દર્દીના ચહેરાને બેકપેઇન, ઘૂંટણની પીડા, સંધિવા, સ્પોન્ડિલોસિસ, સાયટિકા, માથાનો દુખાવો, સ્થિર ખભા, મેમરી લોસ (ક્લ્યુટો યુગ), ડાયાબિટીઝ, અનિદ્રા વગેરે જેવા દૂર કરીને સંખ્યાબંધ ચહેરાને ખુશ કર્યા, તેમણે વિદ્યાનગરને ઉપચાર માટે પોતાનું કેન્દ્ર બનાવ્યું. . આજકાલ દરેક વ્યક્તિ દવાઓથી છૂટકારો મેળવવા માગે છે. આ ઉપચારમાં તે દર્દીઓને દવા વગર સારવાર આપે છે. સુટરિંગ્સને દૂર કરવા માટે તે ચુંબક તેમજ એક્યુપ્રેશર થેરેપીનો ઉપયોગ કરી રહ્યો છે. અખબારો અને સામયિકો દ્વારા કલ્પેશ ભટ્ટે આ ઉપચારથી સંબંધિત લોકોને માર્ગદર્શન જ આપ્યું ન હતું, પરંતુ આવી કુદરતી, ફળદાયી ઉપચાર અંગે જાગૃતિ ફેલાવી હતી. તે યુ ટ્યુબ પર પણ બધાને માહિતી અને ટીપ્સ પ્રદાન કરે છે.</string>
    <string name="label_take_appointment">Take Appointment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_enter_full_name">Enter Full Name</string>
    <string name="hint_enter_subject">Enter Subject</string>
    <string name="hint_enter_feedback">Enter Feedback</string>
    <string name="hint_enter_mobile_no">Enter Mobile No.</string>
    <string name="button_make_appointment">Make appointment</string>
    <string name="label_select_time">Select Time:</string>
    <string name="label_time_9_00_am_to_12_30_pm">9:00 AM To 12:30 PM</string>
    <string name="hint_000_0000000000">000 0000000000</string>
    <string name="hint_example_gmail_com">example@gmail.com</string>
    <string name="label_4_00_pm_to_8_00_pm">4:00 PM To 8:00 PM</string>
    <string name="label_om_magnet_therapy_clinic">Clinic Name</string>
    <string name="label_welcome_om_magnet_therapy_clinic">Welcome to %s</string>
    <string name="label_morning_appointment_timing">Morning Appointment Timing</string>
    <string name="label_afternoon_appointment_timing">Afternoon Appointment Timing</string>
    <string name="label_9_00_am_to_9_15_am">9:00 AM To 9:15 AM</string>
    <string name="label_9_15_am_to_9_30_am">9:15 AM To 9:30 AM</string>
    <string name="label_9_30_am_to_9_45_am">9:30 AM To 9:45 AM</string>
    <string name="label_9_45_am_to_10_00_am">9:45 AM To 10:00 AM</string>
    <string name="label_10_00_am_to_10_15_am">10:00 AM To 10:15 AM</string>
    <string name="_10_15_am_to_10_30_am">10:15 AM To 10:30 AM</string>
    <string name="label_10_30_am_to_10_45_am">10:30 AM To 10:45 AM</string>
    <string name="label_10_45_am_to_11_00_am">10:45 AM To 11:00 AM</string>
    <string name="label_11_00_am_to_11_15_am">11:00 AM To 11:15 AM</string>
    <string name="label_11_15_am_to_11_30_am">11:15 AM To 11:30 AM</string>
    <string name="label_11_30_am_to_11_45_am">11:30 AM To 11:45 AM</string>
    <string name="label_11_45_am_to_12_00_pm">11:45 AM To 12:00 PM</string>
    <string name="label_12_00_pm_to_12_15_pm">12:00 PM To 12:15 PM</string>
    <string name="label_12_15_pm_to_12_30_pm">12:15 PM To 12:30 PM</string>
    <string name="label_dr_phone_91_7016244301">+91 7016244301</string>
    <string name="label_dr_email_bkalpesh7_gmail_com">bkalpesh7@gmail.com</string>
    <string name="label_address">SF/1 Jaydev Sankul, near Bajkhedavaad Hostel, Bhaikaka Statue Road,Vidyanagar</string>
    <string name="label_4_00_pm_to_4_15_pm">4:00 PM To 4:15 PM</string>
    <string name="label_4_15_pm_to_4_30_pm">4:15 PM To 4:30 PM</string>
    <string name="label_4_30_pm_to_4_45_pm">4:30 PM To 4:45 PM</string>
    <string name="label_4_45_pm_to_5_00_pm">4:45 PM To 5:00 PM</string>
    <string name="label_5_00_pm_to_5_15_pm">5:00 PM To 5:15 PM</string>
    <string name="label_5_15_pm_to_5_30pm">5:15 PM To 5:30PM</string>
    <string name="label_5_30_pm_to_5_45_pm">5:30 PM To 5:45 PM</string>
    <string name="label_5_45_pm_to_6_00_pm">5:45 PM To 6:00 PM</string>
    <string name="label_6_00_pm_to_6_15_pm">6:00 PM To 6:15 PM</string>
    <string name="label_6_15_pm_to_6_30pm">6:15 PM To 6:30PM</string>
    <string name="label_6_30_pm_to_6_45_pm">6:30 PM To 6:45 PM</string>
    <string name="label_6_45_pm_to_7_00_pm">6:45 PM To 7:00 PM</string>
    <string name="label_7_00_pm_to_7_15_pm">7:00 PM To 7:15 PM</string>
    <string name="label_7_15_pm_to_7_30_pm">7:15 PM To 7:30 PM</string>
    <string name="label_7_30_pm_to_7_45_pm">7:30 PM To 7:45 PM</string>
    <string name="label_7_45_pm_to_8_00_pm">7:45 PM To 8:00 PM</string>
    <string name="label_dr_name">Dr. Kalpesh Bhatt</string>
    <string name="about_magnet_therapy">About Magnet Therapy</string>
    <string name="label_why_this_therapy">Why This Therapy?</string>
    <string name="label_why_this_therapy_guj">આ થેરાપી શા માટે ?</string>
    <string name="label_why_prospection_eng">How it works?</string>
    <string name="label_why_prospection_guj">કેવી રીતે સારવાર થાય છે ?</string>
    <string name="label_magnet_therapy_gallery">Magnet Therapy Gallery</string>
    <string name="label_cancel">cancel</string>
    <string name="label_set_timing">set timing</string>
    <string name="error_enter_name">Please Enter Your Name</string>
    <string name="error_enter_number">Please Enter Your Contact Number</string>
    <string name="error_select_appointment">Please Select Your Appointment Time</string>
    <string name="error_select_date">Please Select Your Appointment Date</string>
    <string name="message_success">Your Appointment is Booked! Successfully</string>
    <string name="label_about_prospection_service">About Prospection Service</string>
    <string name="label_about_magnet">About Magnet Therapy</string>
    <string name="label_prospection_service">Prospection Services</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_feedback">Feedback</string>
    <string name="label_send_feedback">Send Feedback</string>
    <string name="label_gender">Gender:</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="message_select_gender">Select Gender</string>
    <string name="label_no_internet_connection_ntry_again">No Internet Connection!\nTry Again</string>
    <string name="label_other">Other</string>
    <string name="hint_select_date">Select Date:</string>
    <string name="label_login_here">Login Here</string>
    <string name="hint_enter_username">Enter Username</string>
    <string name="hint_enter_password">Enter Password</string>
    <string name="label_let_s_go">Let\'s Go</string>
    <string name="label_don_t_have_account_sign_up">Don\'t have account? Sign Up</string>
    <string name="hint_register">Register</string>
    <string name="label_already_have_account_sign_in">Already have account? Sign In</string>
    <string name="hint_email_address">Email Address</string>
    <string name="label_register_here">Register Here</string>
</resources>