<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.fragment.SignUpFragment">


    <View
        android:id="@+id/viewMainLogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/mainColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_register_here"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/viewMainLogin"
        app:layout_constraintEnd_toEndOf="@id/viewMainLogin"
        app:layout_constraintStart_toStartOf="@id/viewMainLogin"
        app:layout_constraintTop_toTopOf="@id/viewMainLogin" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextFullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/hint_enter_full_name"
        android:inputType="text"
        android:padding="@dimen/dimen_10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toTopOf="@id/guideLineMiddle" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/hint_enter_mobile_no"
        android:inputType="number"
        android:padding="@dimen/dimen_10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/editTextFullName"
        app:layout_constraintStart_toStartOf="@id/editTextFullName"
        app:layout_constraintTop_toBottomOf="@id/editTextFullName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/hint_email_address"
        android:inputType="textEmailAddress"
        android:padding="@dimen/dimen_10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/editTextPhoneNumber"
        app:layout_constraintStart_toStartOf="@id/editTextPhoneNumber"
        app:layout_constraintTop_toBottomOf="@id/editTextPhoneNumber" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewGender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:translationZ="@dimen/dimen_2dp"
        app:cardBackgroundColor="@color/mainColor"
        app:cardCornerRadius="@dimen/dimen_10dp"
        app:cardElevation="@dimen/dimen_2dp"
        app:layout_constraintEnd_toEndOf="@id/editTextEmail"
        app:layout_constraintStart_toStartOf="@id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewGenderText"
                android:layout_width="0dp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_10dp"
                android:paddingVertical="@dimen/dimen_10dp"
                android:text="@string/label_gender"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintBottom_toBottomOf="@id/textViewGenderText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textViewGenderText"
                app:layout_constraintTop_toTopOf="@id/textViewGenderText">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"
                    android:text="@string/label_male" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"
                    android:text="@string/label_female" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radioButtonOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"
                    android:text="@string/label_other" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/hint_enter_password"
            android:inputType="textPassword"
            android:padding="@dimen/dimen_10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/cardViewGender"
            app:layout_constraintStart_toStartOf="@id/cardViewGender"
            app:layout_constraintTop_toBottomOf="@id/cardViewGender" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_20dp"
            android:background="@drawable/edit_text_bg"
            android:text="@string/hint_register"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/textViewSignIn"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@id/editTextPassword"
            app:layout_constraintVertical_bias="0.9" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:text="@string/label_already_have_account_sign_in"
            android:textAlignment="center"
            android:textSize="@dimen/dimen_13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintStart_toStartOf="@id/guideLineStart" />

</androidx.constraintlayout.widget.ConstraintLayout>